# sensAIReferenceDesign

./: .gitattributes  LICENSE.md  NOTICE.txt  README.md  THIRD_PARTY_LICENSES.md
demo/clnx/: README.md  Release-Notes.md
demo/clnx/FW_UPDATE_TOOL/: clnxsomdemo_fwupd_01.12.00.00
demo/clnx/RESOURCES/: config.txt
demo/clnx/RESOURCES/I2C_LIB/: Makefile  ctypes_example.py  i2c_adapter.cc  i2c_adapter.h  i2c_intr_gpio.c  i2c_intr_gpio.h  i2c_pure_c.cc  i2c_pure_c.h  i2c_serial.py
demo/clnx/RESOURCES/sample/evesample/: CMakeLists.txt  EveFpgaSdkSample.cpp  pch.h
demo/clnx/RPI_DRIVERS/: lsc219.dtbo  lscc-imx219.ko
demo/clnx/RPI_OS/: RPi_OS-arm64_1.0.0_CLNX_HMI_v5.img.xz
demo/clnx/WFOV_GESTURE_PREVIEW/: README.md
demo/cpnx/dd/: README.md  Release-Notes.md
demo/cpnx/mod/: README.md  Release-Notes.md
dev/gard/apps/mod/hub_app/src/hub/hub_py/: README.md  pyproject.toml
dev/gard/apps/mod/hub_app/src/hub/hub_py/hub/: camInterface.py  eveInterface.py
dev/gard/apps/mod/hub_app/src/hub/hub_py/hub/eve/structs/: CBasicStructs.py  CDetectionStructs.py  CHandGesture.py  CROIStructs.py  CScreenLocation.py  EveControlInterface.py  EveControlOption.py  EveFaceId.py  EveFaceIdStructs.py  EveFaceTrackerStructs.py  EveFpga.py  EveHandGesture.py  EveHandGestureStructs.py  EveKarolinska.py  EveROIStructs.py  EveScreenLocation.py  EveScreenLocationStructs.py  README.txt
dev/gard/hub/: README.md  design_notes.md
dev/gard/platform_fw/: .gitignore  LICENSE  README.md
dev/gard/rtl/: README.md  gard_torna_revb_cpnx100.bit  torna_machxo3d_pwrup_impl1.jed
(+302 files in other folders)
